[gd_scene load_steps=12 format=3 uid="uid://bkmoj6q5iovkw"]

[ext_resource type="Script" path="res://scenes/Menu.gd" id="1_ea10w"]
[ext_resource type="TileSet" uid="uid://b0narmqpjjdgd" path="res://reso/new_tile_set.tres" id="2_l3jqv"]
[ext_resource type="StyleBox" uid="uid://bpy6tfpwf2rfk" path="res://reso/styles/panel.tres" id="3_awxl4"]
[ext_resource type="Texture2D" uid="uid://bpe8aih4ucwg6" path="res://reso/icons/ui/settings.tres" id="3_jjvg3"]
[ext_resource type="Texture2D" uid="uid://0dqu874lfk7e" path="res://reso/icons/ui/close.tres" id="4_f2fey"]
[ext_resource type="Texture2D" uid="uid://q8ib2dchvug" path="res://reso/icons/ui/toggle_on.tres" id="6_n6bbf"]
[ext_resource type="Texture2D" uid="uid://bs57qd86lf7ve" path="res://reso/icons/ui/toggle_off.tres" id="7_agpgt"]

[sub_resource type="Animation" id="Animation_tdxy1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_krdgi"]
resource_name = "float"
length = 3.0
loop_mode = 1
step = 0.75
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.75, 1.5, 2.25),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(1, 1), Vector2(1.2, 1.2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_txv6u"]
_data = {
"RESET": SubResource("Animation_tdxy1"),
"float": SubResource("Animation_krdgi")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v8ju3"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ea10w")

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("2_l3jqv")
format = 2
layer_0/name = "water"
layer_0/tile_data = PackedInt32Array(65534, 65540, 0, 131070, 65540, 0, 196606, 65540, 0, 262142, 65540, 0, 327678, 65540, 0, 393214, 65540, 0, 458750, 65540, 0, 524286, 65540, 0, 589822, 65540, 0, 655358, 65540, 0, 720894, 65540, 0, 786430, 65540, 0, 851966, 65540, 0, 917502, 65540, 0, 983038, 65540, 0, 1048574, 65540, 0, 1114110, 65540, 0, 1179646, 65540, 0, 1245182, 65540, 0, 1310718, 65540, 0, 1376254, 65540, 0, 1441790, 65540, 0, 1507326, 65540, 0, 65535, 65540, 0, 131071, 65540, 0, 196607, 65540, 0, 262143, 65540, 0, 327679, 65540, 0, 393215, 65540, 0, 458751, 65540, 0, 524287, 65540, 0, 589823, 65540, 0, 655359, 65540, 0, 720895, 65540, 0, 786431, 65540, 0, 851967, 65540, 0, 917503, 65540, 0, 983039, 65540, 0, 1048575, 65540, 0, 1114111, 65540, 0, 1179647, 65540, 0, 1245183, 65540, 0, 1310719, 65540, 0, 1376255, 65540, 0, 1441791, 65540, 0, 1507327, 65540, 0, 0, 65540, 0, 65536, 65540, 0, 131072, 65540, 0, 196608, 65540, 0, 262144, 65540, 0, 327680, 65540, 0, 393216, 65540, 0, 458752, 65540, 0, 524288, 65540, 0, 589824, 65540, 0, 655360, 65540, 0, 720896, 65540, 0, 786432, 65540, 0, 851968, 65540, 0, 917504, 65540, 0, 983040, 65540, 0, 1048576, 65540, 0, 1114112, 65540, 0, 1179648, 65540, 0, 1245184, 65540, 0, 1310720, 65540, 0, 1376256, 65540, 0, 1441792, 65540, 0, 1, 65540, 0, 65537, 65540, 0, 131073, 65540, 0, 196609, 65540, 0, 262145, 65540, 0, 327681, 65540, 0, 393217, 65540, 0, 458753, 65540, 0, 524289, 65540, 0, 589825, 65540, 0, 655361, 65540, 0, 720897, 65540, 0, 786433, 65540, 0, 851969, 65540, 0, 917505, 65540, 0, 983041, 65540, 0, 1048577, 65540, 0, 1114113, 65540, 0, 1179649, 65540, 0, 1245185, 65540, 0, 1310721, 65540, 0, 1376257, 65540, 0, 1441793, 65540, 0, 2, 65540, 0, 65538, 65540, 0, 131074, 65540, 0, 196610, 65540, 0, 262146, 65540, 0, 327682, 65540, 0, 393218, 65540, 0, 458754, 65540, 0, 524290, 65540, 0, 589826, 65540, 0, 655362, 65540, 0, 720898, 65540, 0, 786434, 65540, 0, 851970, 65540, 0, 917506, 65540, 0, 983042, 65540, 0, 1048578, 65540, 0, 1114114, 65540, 0, 1179650, 65540, 0, 1245186, 65540, 0, 1310722, 65540, 0, 1376258, 65540, 0, 1441794, 65540, 0, 3, 65540, 0, 65539, 65540, 0, 131075, 65540, 0, 196611, 65540, 0, 262147, 65540, 0, 327683, 65540, 0, 393219, 65540, 0, 458755, 65540, 0, 524291, 65540, 0, 589827, 65540, 0, 655363, 65540, 0, 720899, 65540, 0, 786435, 65540, 0, 851971, 65540, 0, 917507, 65540, 0, 983043, 65540, 0, 1048579, 65540, 0, 1114115, 65540, 0, 1179651, 65540, 0, 1245187, 65540, 0, 1310723, 65540, 0, 1376259, 65540, 0, 1441795, 65540, 0, 4, 65540, 0, 65540, 65540, 0, 131076, 65540, 0, 196612, 65540, 0, 262148, 65540, 0, 327684, 65540, 0, 393220, 65540, 0, 458756, 65540, 0, 524292, 65540, 0, 589828, 65540, 0, 655364, 65540, 0, 720900, 65540, 0, 786436, 65540, 0, 851972, 65540, 0, 917508, 65540, 0, 983044, 65540, 0, 1048580, 65540, 0, 1114116, 65540, 0, 1179652, 65540, 0, 1245188, 65540, 0, 1310724, 65540, 0, 1376260, 65540, 0, 1441796, 65540, 0, 5, 65540, 0, 65541, 65540, 0, 131077, 65540, 0, 196613, 65540, 0, 262149, 65540, 0, 327685, 65540, 0, 393221, 65540, 0, 458757, 65540, 0, 524293, 65540, 0, 589829, 65540, 0, 655365, 65540, 0, 720901, 65540, 0, 786437, 65540, 0, 851973, 65540, 0, 917509, 65540, 0, 983045, 65540, 0, 1048581, 65540, 0, 1114117, 65540, 0, 1179653, 65540, 0, 1245189, 65540, 0, 1310725, 65540, 0, 1376261, 65540, 0, 1441797, 65540, 0, 6, 65540, 0, 65542, 65540, 0, 131078, 65540, 0, 196614, 65540, 0, 262150, 65540, 0, 327686, 65540, 0, 393222, 65540, 0, 458758, 65540, 0, 524294, 65540, 0, 589830, 65540, 0, 655366, 65540, 0, 720902, 65540, 0, 786438, 65540, 0, 851974, 65540, 0, 917510, 65540, 0, 983046, 65540, 0, 1048582, 65540, 0, 1114118, 65540, 0, 1179654, 65540, 0, 1245190, 65540, 0, 1310726, 65540, 0, 1376262, 65540, 0, 1441798, 65540, 0, 7, 65540, 0, 65543, 65540, 0, 131079, 65540, 0, 196615, 65540, 0, 262151, 65540, 0, 327687, 65540, 0, 393223, 65540, 0, 458759, 65540, 0, 524295, 65540, 0, 589831, 65540, 0, 655367, 65540, 0, 720903, 65540, 0, 786439, 65540, 0, 851975, 65540, 0, 917511, 65540, 0, 983047, 65540, 0, 1048583, 65540, 0, 1114119, 65540, 0, 1179655, 65540, 0, 1245191, 65540, 0, 1310727, 65540, 0, 1376263, 65540, 0, 1441799, 65540, 0, 8, 65540, 0, 65544, 65540, 0, 131080, 65540, 0, 196616, 65540, 0, 262152, 65540, 0, 327688, 65540, 0, 393224, 65540, 0, 458760, 65540, 0, 524296, 65540, 0, 589832, 65540, 0, 655368, 65540, 0, 720904, 65540, 0, 786440, 65540, 0, 851976, 65540, 0, 917512, 65540, 0, 983048, 65540, 0, 1048584, 65540, 0, 1114120, 65540, 0, 1179656, 65540, 0, 1245192, 65540, 0, 1310728, 65540, 0, 1376264, 65540, 0, 1441800, 65540, 0, 9, 65540, 0, 65545, 65540, 0, 131081, 65540, 0, 196617, 65540, 0, 262153, 65540, 0, 327689, 65540, 0, 393225, 65540, 0, 458761, 65540, 0, 524297, 65540, 0, 589833, 65540, 0, 655369, 65540, 0, 720905, 65540, 0, 786441, 65540, 0, 851977, 65540, 0, 917513, 65540, 0, 983049, 65540, 0, 1048585, 65540, 0, 1114121, 65540, 0, 1179657, 65540, 0, 1245193, 65540, 0, 1310729, 65540, 0, 1376265, 65540, 0, 1441801, 65540, 0, 10, 65540, 0, 65546, 65540, 0, 131082, 65540, 0, 196618, 65540, 0, 262154, 65540, 0, 327690, 65540, 0, 393226, 65540, 0, 458762, 65540, 0, 524298, 65540, 0, 589834, 65540, 0, 655370, 65540, 0, 720906, 65540, 0, 786442, 65540, 0, 851978, 65540, 0, 917514, 65540, 0, 983050, 65540, 0, 1048586, 65540, 0, 1114122, 65540, 0, 1179658, 65540, 0, 1245194, 65540, 0, 1310730, 65540, 0, 1376266, 65540, 0, 1441802, 65540, 0, 11, 65540, 0, 65547, 65540, 0, 131083, 65540, 0, 196619, 65540, 0, 262155, 65540, 0, 327691, 65540, 0, 393227, 65540, 0, 458763, 65540, 0, 524299, 65540, 0, 589835, 65540, 0, 655371, 65540, 0, 720907, 65540, 0, 786443, 65540, 0, 851979, 65540, 0, 917515, 65540, 0, 983051, 65540, 0, 1048587, 65540, 0, 1114123, 65540, 0, 1179659, 65540, 0, 1245195, 65540, 0, 1310731, 65540, 0, 1376267, 65540, 0, 1441803, 65540, 0, 12, 65540, 0, 65548, 65540, 0, 131084, 65540, 0, 196620, 65540, 0, 262156, 65540, 0, 327692, 65540, 0, 393228, 65540, 0, 458764, 65540, 0, 524300, 65540, 0, 589836, 65540, 0, 655372, 65540, 0, 720908, 65540, 0, 786444, 65540, 0, 851980, 65540, 0, 917516, 65540, 0, 983052, 65540, 0, 1048588, 65540, 0, 1114124, 65540, 0, 1179660, 65540, 0, 1245196, 65540, 0, 1310732, 65540, 0, 1376268, 65540, 0, 1441804, 65540, 0, 13, 65540, 0, 65549, 65540, 0, 131085, 65540, 0, 196621, 65540, 0, 262157, 65540, 0, 327693, 65540, 0, 393229, 65540, 0, 458765, 65540, 0, 524301, 65540, 0, 589837, 65540, 0, 655373, 65540, 0, 720909, 65540, 0, 786445, 65540, 0, 851981, 65540, 0, 917517, 65540, 0, 983053, 65540, 0, 1048589, 65540, 0, 1114125, 65540, 0, 1179661, 65540, 0, 1245197, 65540, 0, 1310733, 65540, 0, 1376269, 65540, 0, 1441805, 65540, 0, 14, 65540, 0, 65550, 65540, 0, 131086, 65540, 0, 196622, 65540, 0, 262158, 65540, 0, 327694, 65540, 0, 393230, 65540, 0, 458766, 65540, 0, 524302, 65540, 0, 589838, 65540, 0, 655374, 65540, 0, 720910, 65540, 0, 786446, 65540, 0, 851982, 65540, 0, 917518, 65540, 0, 983054, 65540, 0, 1048590, 65540, 0, 1114126, 65540, 0, 1179662, 65540, 0, 1245198, 65540, 0, 1310734, 65540, 0, 1376270, 65540, 0, 1441806, 65540, 0, 15, 65540, 0, 65551, 65540, 0, 131087, 65540, 0, 196623, 65540, 0, 262159, 65540, 0, 327695, 65540, 0, 393231, 65540, 0, 458767, 65540, 0, 524303, 65540, 0, 589839, 65540, 0, 655375, 65540, 0, 720911, 65540, 0, 786447, 65540, 0, 851983, 65540, 0, 917519, 65540, 0, 983055, 65540, 0, 1048591, 65540, 0, 1114127, 65540, 0, 1179663, 65540, 0, 1245199, 65540, 0, 1310735, 65540, 0, 1376271, 65540, 0, 1441807, 65540, 0, 983056, 65540, 0, 1048592, 65540, 0, 1114128, 65540, 0, 1179664, 65540, 0, 1245200, 65540, 0, 1310736, 65540, 0, 1376272, 65540, 0, 1441808, 65540, 0, 1507344, 65540, 0, 1572880, 65540, 0, 983057, 65540, 0, 1048593, 65540, 0, 1114129, 65540, 0, 1179665, 65540, 0, 1245201, 65540, 0, 1310737, 65540, 0, 1376273, 65540, 0, 1441809, 65540, 0, 1507345, 65540, 0, 1572881, 65540, 0, 983058, 65540, 0, 1048594, 65540, 0, 1114130, 65540, 0, 1179666, 65540, 0, 1245202, 65540, 0, 1310738, 65540, 0, 1376274, 65540, 0, 1441810, 65540, 0, 1507346, 65540, 0, 1572882, 65540, 0, 983059, 65540, 0, 1048595, 65540, 0, 1114131, 65540, 0, 1179667, 65540, 0, 1245203, 65540, 0, 1310739, 65540, 0, 1376275, 65540, 0, 1441811, 65540, 0, 1507347, 65540, 0, 1572883, 65540, 0, 1572861, 65540, 0, 1638397, 65540, 0, 1572862, 65540, 0, 1638398, 65540, 0, 1572863, 65540, 0, 1638399, 65540, 0, 1507328, 65540, 0, 1572864, 65540, 0, 1507329, 65540, 0, 1572865, 65540, 0, 1507330, 65540, 0, 1572866, 65540, 0, 1507331, 65540, 0, 1572867, 65540, 0, 1507332, 65540, 0, 1572868, 65540, 0, 1507333, 65540, 0, 1572869, 65540, 0, 1507334, 65540, 0, 1572870, 65540, 0, 1507335, 65540, 0, 1572871, 65540, 0, 1507336, 65540, 0, 1572872, 65540, 0, 1507337, 65540, 0, 1572873, 65540, 0, 1507338, 65540, 0, 1572874, 65540, 0, 1507339, 65540, 0, 1572875, 65540, 0, 1507340, 65540, 0, 1572876, 65540, 0, 1507341, 65540, 0, 1572877, 65540, 0, 1507342, 65540, 0, 1572878, 65540, 0, 1507343, 65540, 0, 1572879, 65540, 0, 1703933, 65540, 0, 1703934, 65540, 0, 1703935, 65540, 0, 1638400, 65540, 0, 1638401, 65540, 0, 1638402, 65540, 0, 1638403, 65540, 0, 1638404, 65540, 0, 1638405, 65540, 0, 1638406, 65540, 0, 1638407, 65540, 0, 1638408, 65540, 0, 1638409, 65540, 0, 1638415, 65540, 0, 1638416, 65540, 0, 1638417, 65540, 0, 1638418, 65540, 0, 1638419, 65540, 0, 1638414, 65540, 0, 1638413, 65540, 0, 1638412, 65540, 0, 1638411, 65540, 0, 1638410, 65540, 0, 1507325, 65540, 0, 1441789, 65540, 0, 1376253, 65540, 0, 1310717, 65540, 0, 1245181, 65540, 0, 1179645, 65540, 0, 1114109, 65540, 0, 1048573, 65540, 0, 983037, 65540, 0, 917501, 65540, 0, 851965, 65540, 0, 786429, 65540, 0, 720893, 65540, 0, 655357, 65540, 0, 589821, 65540, 0, 524285, 65540, 0, 458749, 65540, 0, 393213, 65540, 0, 327677, 65540, 0, 262141, 65540, 0, 196605, 65540, 0, 131069, 65540, 0, 65533, 65540, 0, -65539, 65540, 0, -3, 65540, 0, -65538, 65540, 0, -2, 65540, 0, -65537, 65540, 0, -1, 65540, 0, -131072, 65540, 0, -65536, 65540, 0, -131071, 65540, 0, -65535, 65540, 0, -131070, 65540, 0, -65534, 65540, 0, -131069, 65540, 0, -65533, 65540, 0, -131068, 65540, 0, -65532, 65540, 0, -131067, 65540, 0, -65531, 65540, 0, -131066, 65540, 0, -65530, 65540, 0, -131065, 65540, 0, -65529, 65540, 0, -131064, 65540, 0, -65528, 65540, 0, -131063, 65540, 0, -65527, 65540, 0, -131062, 65540, 0, -65526, 65540, 0, -131061, 65540, 0, -65525, 65540, 0, -131060, 65540, 0, -65524, 65540, 0, -131059, 65540, 0, -65523, 65540, 0, -131058, 65540, 0, -65522, 65540, 0, -131057, 65540, 0, -65521, 65540, 0, -131056, 65540, 0, -65520, 65540, 0, 16, 65540, 0, 65552, 65540, 0, 131088, 65540, 0, 196624, 65540, 0, 262160, 65540, 0, 327696, 65540, 0, 393232, 65540, 0, 458768, 65540, 0, 524304, 65540, 0, 589840, 65540, 0, 655376, 65540, 0, 720912, 65540, 0, 786448, 65540, 0, 851984, 65540, 0, 917520, 65540, 0, 917521, 65540, 0, 917522, 65540, 0, 917523, 65540, 0)
layer_1/name = "ground"
layer_1/tile_data = PackedInt32Array(262142, 0, 0, 327678, 0, 1, 393214, 0, 1, 458750, 0, 1, 524286, 0, 1, 589822, 0, 2, 262143, 65536, 0, 327679, 65536, 1, 393215, 65536, 1, 458751, 65536, 1, 524287, 65536, 1, 589823, 65536, 2, 196608, 65536, 0, 262144, 65536, 1, 327680, 65536, 1, 393216, 65536, 1, 458752, 65536, 1, 524288, 65536, 2, 196609, 65536, 0, 262145, 65536, 1, 327681, 65536, 1, 393217, 65536, 1, 458753, 65536, 1, 524289, 65536, 2, 196610, 65536, 0, 262146, 65536, 1, 327682, 65536, 1, 393218, 65536, 1, 458754, 65536, 1, 524290, 65536, 2, 196611, 131072, 0, 262147, 131072, 1, 327683, 131072, 1, 393219, 131072, 1, 458755, 131072, 1, 524291, 131072, 2, 720898, 0, 0, 786434, 0, 1, 851970, 0, 1, 917506, 0, 1, 983042, 0, 1, 1048578, 65536, 1, 1114114, 65536, 1, 1179650, 65536, 1, 1245186, 65536, 1, 1310722, 65536, 1, 1376258, 65536, 1, 1441794, 65536, 1, 1507330, 65536, 1, 1572866, 0, 2, 720899, 65536, 0, 786435, 65536, 1, 851971, 65536, 1, 917507, 65536, 1, 983043, 65536, 1, 1048579, 65536, 1, 1114115, 65536, 1, 1179651, 65536, 1, 1245187, 65536, 1, 1310723, 65536, 1, 1376259, 65536, 1, 1441795, 65536, 1, 1507331, 65536, 1, 1572867, 65536, 2, 720900, 65536, 0, 786436, 65536, 1, 851972, 65536, 1, 917508, 65536, 1, 983044, 65536, 1, 1048580, 65536, 1, 1114116, 65536, 1, 1179652, 65536, 1, 1245188, 65536, 1, 1310724, 65536, 1, 1376260, 65536, 1, 1441796, 65536, 1, 1507332, 65536, 1, 1572868, 65536, 2, 720901, 65536, 0, 786437, 65536, 1, 851973, 65536, 1, 917509, 65536, 1, 983045, 65536, 1, 1048581, 65536, 1, 1114117, 65536, 1, 1179653, 65536, 1, 1245189, 65536, 1, 1310725, 65536, 1, 1376261, 65536, 1, 1441797, 65536, 1, 1507333, 65536, 1, 1572869, 65536, 2, 720902, 65536, 0, 786438, 65536, 1, 851974, 65536, 1, 917510, 65536, 1, 983046, 65536, 1, 1048582, 65536, 1, 1114118, 65536, 1, 1179654, 65536, 1, 1245190, 65536, 1, 1310726, 65536, 1, 1376262, 65536, 1, 1441798, 65536, 1, 1507334, 65536, 1, 1572870, 65536, 2, 720903, 65536, 0, 786439, 65536, 1, 851975, 65536, 1, 917511, 65536, 1, 983047, 65536, 1, 1048583, 65536, 1, 1114119, 65536, 1, 1179655, 65536, 1, 1245191, 65536, 1, 1310727, 65536, 1, 1376263, 65536, 1, 1441799, 65536, 1, 1507335, 65536, 1, 1572871, 65536, 2, 720904, 65536, 0, 786440, 65536, 1, 851976, 65536, 1, 917512, 65536, 1, 983048, 65536, 1, 1048584, 65536, 1, 1114120, 65536, 1, 1179656, 65536, 1, 1245192, 65536, 1, 1310728, 65536, 1, 1376264, 65536, 1, 1441800, 65536, 1, 1507336, 65536, 1, 1572872, 65536, 2, 720905, 65536, 0, 786441, 65536, 1, 851977, 65536, 1, 917513, 65536, 1, 983049, 65536, 1, 1048585, 65536, 1, 1114121, 65536, 1, 1179657, 65536, 1, 1245193, 65536, 1, 1310729, 65536, 1, 1376265, 65536, 1, 1441801, 65536, 1, 1507337, 65536, 1, 1572873, 65536, 2, 720906, 65536, 0, 786442, 65536, 1, 851978, 65536, 1, 917514, 65536, 1, 983050, 65536, 1, 1048586, 65536, 1, 1114122, 65536, 1, 1179658, 65536, 1, 1245194, 65536, 1, 1310730, 65536, 1, 1376266, 65536, 1, 1441802, 65536, 1, 1507338, 65536, 1, 1572874, 65536, 2, 720907, 65536, 0, 786443, 65536, 1, 851979, 65536, 1, 917515, 65536, 1, 983051, 65536, 1, 1048587, 65536, 1, 1114123, 65536, 1, 1179659, 65536, 1, 1245195, 65536, 1, 1310731, 65536, 1, 1376267, 65536, 1, 1441803, 65536, 1, 1507339, 65536, 1, 1572875, 65536, 2, 720908, 131072, 0, 786444, 131072, 1, 851980, 131072, 1, 917516, 131072, 1, 983052, 131072, 1, 1048588, 65536, 1, 1114124, 65536, 1, 1179660, 65536, 1, 1245196, 65536, 1, 1310732, 65536, 1, 1376268, 65536, 1, 1441804, 65536, 1, 1507340, 65536, 1, 1572876, 65536, 2, 1048589, 65536, 0, 1114125, 65536, 1, 1179661, 65536, 1, 1245197, 65536, 1, 1310733, 65536, 1, 1376269, 65536, 1, 1441805, 65536, 1, 1507341, 65536, 1, 1572877, 65536, 2, 1048590, 65536, 0, 1114126, 65536, 1, 1179662, 65536, 1, 1245198, 65536, 1, 1310734, 65536, 1, 1376270, 65536, 1, 1441806, 65536, 1, 1507342, 65536, 1, 1572878, 65536, 2, 1048591, 65536, 0, 1114127, 65536, 1, 1179663, 65536, 1, 1245199, 65536, 1, 1310735, 65536, 1, 1376271, 65536, 1, 1441807, 65536, 1, 1507343, 65536, 1, 1572879, 65536, 2, 1048592, 65536, 0, 1114128, 65536, 1, 1179664, 65536, 1, 1245200, 65536, 1, 1310736, 65536, 1, 1376272, 65536, 1, 1441808, 65536, 1, 1507344, 65536, 1, 1572880, 65536, 2, 1048593, 65536, 0, 1114129, 65536, 1, 1179665, 65536, 1, 1245201, 65536, 1, 1310737, 65536, 1, 1376273, 65536, 1, 1441809, 65536, 1, 1507345, 65536, 1, 1572881, 65536, 2, 1048594, 131072, 0, 1114130, 131072, 1, 1179666, 131072, 1, 1245202, 131072, 1, 1310738, 131072, 1, 1376274, 131072, 1, 1441810, 131072, 1, 1507346, 131072, 1, 1572882, 131072, 2, 1114111, 0, 0, 1179647, 0, 1, 1245183, 0, 1, 1310719, 0, 1, 1376255, 0, 1, 1441791, 0, 1, 1507327, 0, 2, 1048576, 65536, 0, 1114112, 65536, 1, 1179648, 65536, 1, 1245184, 65536, 1, 1310720, 65536, 1, 1376256, 65536, 1, 1441792, 65536, 2, 1048577, 65536, 0, 1114113, 65536, 1, 1179649, 65536, 1, 1245185, 65536, 1, 1310721, 65536, 1, 1376257, 65536, 1, 1441793, 65536, 2, -65529, 0, 0, 7, 0, 1, 65543, 0, 1, 131079, 0, 1, 196615, 0, 1, 262151, 0, 1, 327687, 0, 2, -65528, 65536, 0, 8, 65536, 1, 65544, 65536, 1, 131080, 65536, 1, 196616, 65536, 1, 262152, 65536, 1, 327688, 65536, 2, -65527, 65536, 0, 9, 65536, 1, 65545, 65536, 1, 131081, 65536, 1, 196617, 65536, 1, 262153, 65536, 1, 327689, 65536, 2, -65526, 65536, 0, 10, 65536, 1, 65546, 65536, 1, 131082, 65536, 1, 196618, 65536, 1, 262154, 65536, 1, 327690, 65536, 2, -65525, 65536, 0, 11, 65536, 1, 65547, 65536, 1, 131083, 65536, 1, 196619, 65536, 1, 262155, 65536, 1, 327691, 65536, 2, -65524, 65536, 0, 12, 65536, 1, 65548, 65536, 1, 131084, 65536, 1, 196620, 65536, 1, 262156, 65536, 1, 327692, 65536, 2, -65523, 65536, 0, 13, 65536, 1, 65549, 65536, 1, 131085, 65536, 1, 196621, 65536, 1, 262157, 65536, 1, 327693, 65536, 2, -65522, 65536, 0, 14, 65536, 1, 65550, 65536, 1, 131086, 65536, 1, 196622, 65536, 1, 262158, 65536, 1, 327694, 65536, 2, -65521, 131072, 0, 15, 131072, 1, 65551, 131072, 1, 131087, 131072, 1, 196623, 131072, 1, 262159, 131072, 1, 327695, 131072, 2)
layer_2/name = "trees"
layer_2/y_sort_enabled = true
layer_2/tile_data = PackedInt32Array(327679, 65538, 0, 327682, 65538, 0, 458753, 65538, 0, 9, 65538, 0, 262156, 65538, 0, 131086, 65538, 0, 65549, 65538, 0, -65523, 65538, 0, 196617, 2, 0, 262154, 2, 0, 196616, 2, 0, 983044, 65538, 0, 1376267, 65538, 0, 1441797, 2, 0, 1245188, 65538, 0, 1048583, 65538, 0, 851977, 65538, 0, 1114117, 2, 0, 1441808, 65538, 0, 1376270, 65538, 0, 1245199, 2, 0, 1245201, 65538, 0, 1114127, 65538, 0, 1310736, 65538, 0, 1114112, 65538, 0, 1310722, 65538, 0, 786440, 2, 0, 851975, 2, 0, 983050, 262145, 1, 1310725, 131073, 0, 1048579, 327681, 1, 1507342, 196609, 3, 851974, 65537, 0, 1572878, 196609, 4, 65547, 65538, 0, 262158, 327681, 1, 524287, 65537, 1, 524293, 262147, 0, 524294, 327683, 0, 458759, 196611, 0, 655360, 393219, 0, 655374, 458755, 0, 524297, 393219, 0, 458762, 393219, 0, 196613, 393219, 0, 917503, 393219, 0, 1048585, 393217, 1, 1245191, 196609, 2, 1179654, 196609, 2, 1245190, 196609, 2, 1507334, 196609, 2, 1310730, 196609, 2, 1179651, 196609, 2, 1441798, 196609, 2)

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.258824)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -61.0
offset_top = -11.0
offset_right = 61.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(61, 11)
theme_override_font_sizes/font_size = 10
text = "Tap to Start!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_txv6u")
}
autoplay = "float"

[node name="Stats" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -37.0
offset_top = -39.0
offset_right = 37.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 0
text = "Stats"

[node name="Settings" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -33.0
offset_top = 7.0
offset_right = -3.0
offset_bottom = 29.0
grow_horizontal = 0
texture_normal = ExtResource("3_jjvg3")
texture_pressed = ExtResource("3_jjvg3")
texture_hover = ExtResource("3_jjvg3")
texture_disabled = ExtResource("3_jjvg3")
texture_focused = ExtResource("3_jjvg3")
ignore_texture_size = true
stretch_mode = 5

[node name="ModeSelectPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 102.0
offset_right = -6.0
offset_bottom = -102.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("3_awxl4")

[node name="Close" type="TextureButton" parent="ModeSelectPanel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -47.0
offset_top = 28.0
offset_right = -26.0
offset_bottom = 47.0
grow_horizontal = 0
texture_normal = ExtResource("4_f2fey")
texture_pressed = ExtResource("4_f2fey")
texture_hover = ExtResource("4_f2fey")
texture_disabled = ExtResource("4_f2fey")
texture_focused = ExtResource("4_f2fey")
ignore_texture_size = true
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="ModeSelectPanel"]
z_index = 90
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 27.0
offset_top = 54.0
offset_right = -27.0
offset_bottom = -54.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0
alignment = 1

[node name="ChillMode" type="Button" parent="ModeSelectPanel/VBoxContainer"]
layout_mode = 2
text = "Chill Mode"

[node name="EndlessMode" type="Button" parent="ModeSelectPanel/VBoxContainer"]
layout_mode = 2
text = "Endless Mode"

[node name="SettingsPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 102.0
offset_right = -6.0
offset_bottom = -102.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("3_awxl4")

[node name="SettingsClose" type="TextureButton" parent="SettingsPanel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -44.0
offset_top = 27.0
offset_right = -28.0
offset_bottom = 43.0
grow_horizontal = 0
texture_normal = ExtResource("4_f2fey")
texture_pressed = ExtResource("4_f2fey")
texture_hover = ExtResource("4_f2fey")
texture_disabled = ExtResource("4_f2fey")
texture_focused = ExtResource("4_f2fey")
ignore_texture_size = true
stretch_mode = 5

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsPanel"]
layout_mode = 0
offset_left = 53.0
offset_top = 61.0
offset_right = 114.0
offset_bottom = 93.0

[node name="Label" type="Label" parent="SettingsPanel/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.466667, 0.466667, 0.466667, 1)
theme_override_font_sizes/font_size = 8
text = "Music:"
vertical_alignment = 1

[node name="Music" type="CheckButton" parent="SettingsPanel/HBoxContainer"]
layout_mode = 2
theme_override_icons/checked = ExtResource("6_n6bbf")
theme_override_icons/unchecked = ExtResource("7_agpgt")
theme_override_styles/normal = SubResource("StyleBoxEmpty_v8ju3")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_v8ju3")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_v8ju3")
theme_override_styles/hover = SubResource("StyleBoxEmpty_v8ju3")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_v8ju3")
theme_override_styles/focus = SubResource("StyleBoxEmpty_v8ju3")
button_pressed = true

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="pressed" from="Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="ModeSelectPanel/Close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="ModeSelectPanel/VBoxContainer/ChillMode" to="." method="_on_chill_mode_pressed"]
[connection signal="pressed" from="ModeSelectPanel/VBoxContainer/EndlessMode" to="." method="_on_endless_mode_pressed"]
[connection signal="pressed" from="SettingsPanel/SettingsClose" to="." method="_on_settings_close_pressed"]
[connection signal="toggled" from="SettingsPanel/HBoxContainer/Music" to="." method="_on_music_toggled"]
